lintian (1.23.17) UNRELEASED; urgency=low

  * checks/common_data.pm:
    + [RA] Include all combinations of cpu and os from the dpkg cputable
      and ostable files (as of dpkg 1.13.16).  (Closes: #337034, #357433)
  * checks/debdiff{.desc,}:
    + [RA] Warn if the diff contains debian/substvars.  Based on a patch
      by Michael Ablassmeier.  (Closes: #359646)
  * checks/fields:
    + [RA] Allow dpatch in Build-Depends for arch-independent packages if
      it is invoked in clean, build-arch, or binary-arch.
  * checks/fields.desc:
    + [RA] Only list examples of non-standard architectures, since there
      are now too many combinations to list completely.

 -- Russ Allbery <rra@debian.org>  Sun, 26 Mar 2006 16:16:55 -0800

lintian (1.23.16) unstable; urgency=low

  The "What's this Russ guy up to?" release

  * checks/binaries{.desc,}:
    + [RA] Add a check for the new "Invalid operation" error from
      objdump -T.  Skip shared-lib-without-dependency-information for
      files in /usr/lib/debug.
  * checks/changelog-file:
    + [FL] Add line number to output of wrong-bug-number-in-closes.
      Inspired by #349761 from Steinar H. Gunderson.
  * checks/common_data.pm:
    + [FL] Add armeb to %non_standard_archs as requested by
      Martin Michlmayr. (Closes: #350653)
  * checks/debconf:
    + [RA] Packages that depend on dbconfig-common are allowed to have
      config scripts without templates or an explicit debconf dependency.
      Reported by Marcus Better.  (Closes: #344421)
  * checks/debconf.desc:
    + [RA] Clarify the necessary dependencies for packages using SETTITLE.
      (Closes: #349616)
  * checks/debhelper:
    + [RA] Recognize setting DH_COMPAT with := in addition to = in
      debian/rules.  (Closes: #349272)
    + [RA] CDBS sets DH_COMPAT to 4 but doesn't export it.  It does create
      debian/compat with that value if none was present.  Reflect this
      behavior to avoid spurious compat level warnings when using CDBS.