@@ -354,6 +354,14 @@ Tag: build-depends-on-obsolete-package
 Type: error
 Info: The package build-depends on a package that has been superseded.
 
+Tag: build-depends-on-x-metapackage
+Type: error
+Info: Packages must not build-depend on X Window System metapackages.
+ .
+ The metapackages xorg, x-window-system, x-window-system-dev, and
+ x-window-system-core exist only for the benefit of users and should not
+ be used in package build dependencies.
+
 Tag: depends-on-essential-package-without-using-version
 Type: error
 Ref: policy 3.5
