@@ -3,15 +3,17 @@ lintian (1.23.17) UNRELEASED; urgency=low
   * checks/common_data.pm:
     + [RA] Include all combinations of cpu and os from the dpkg cputable
       and ostable files (as of dpkg 1.13.16).  (Closes: #337034, #357433)
+    + [RA] Include a list of known X metapackages.
   * checks/debdiff{.desc,}:
     + [RA] Warn if the diff contains debian/substvars.  Based on a patch
       by Michael Ablassmeier.  (Closes: #359646)
-  * checks/fields:
+  * checks/fields{.desc,}:
     + [RA] Allow dpatch in Build-Depends for arch-independent packages if
       it is invoked in clean, build-arch, or binary-arch.
-  * checks/fields.desc:
     + [RA] Only list examples of non-standard architectures, since there
       are now too many combinations to list completely.
+    + [RA] Catch build dependencies on X metapackages, based on a patch by
+      Josh Triplett.  (Partially addresses #347169)
 
  -- Russ Allbery <rra@debian.org>  Sun, 26 Mar 2006 16:16:55 -0800
 
